@@ -262,6 +262,7 @@ x2goclient (4.1.1.0-0x2go1) UNRELEASED; urgency=medium
       This is important in first case for broker users, where key can be
       generated "on the fly". Maybe it makes sence to add this option in UI
       and command line later.
+    - Correct negative display coordinates for FS sessions.
 
   [ Robert Parts ]
   * New upstream version (4.1.1.0):
